[package]
name = "synchrony-vc-cli"
description="Synchrony-Vesting Smart Contract CLI"
version = "0.1.0"
authors = ["Andrew Fraser<andrew@synchrony-labs.io>"]
edition = "2018"

[dependencies]
synchrony-vc = { version="0.1.0", path="../program", features=["no-entrypoint"] }
solana-program = "1.6.9"
solana-cli-config = "1.6.9"
solana-client = "1.6.9"
solana-sdk = "1.6.9"
solana-clap-utils = "1.6.9"
spl-token = "3.1.0"
spl-associated-token-account = "1.0.2"
chrono = "0.4.19"
clap = "2.33.3"
dirs-next = "2.0.0"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_yaml = "0.8.17"

[[bin]]
name = "scy-vc"
path = "src/main.rs"
